--- a/bootstrap-3.3.7-dist/ChoosePage.html
+++ b/bootstrap-3.3.7-dist/ChoosePage.html
@@ -32,7 +32,7 @@
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-left smoothScroll" href="index.html">
-            <img src="./flyhigh.jpg" height="50" class="d-inline-block align-top">
+            <img src="./flyhigh.jpg" height="62" class="d-inline-block align-top">
           </a>
         </div>
       </div>
@@ -83,10 +83,12 @@
 
         <div class="col-md-9">
           <div class="row">
-            <div class="col-md-5 col-md-offset-1 chooseSort">
+            <div class="col-md-8 col-md-offset-1 chooseSort">
               <div class="row mainMenu">
-                <div class="col-md-5">
-                    <p>Ordenar por:</p>
+                <div class="col-md-5" id="seleccionDe">
+                </div>
+                <div class="col-md-3">
+                  <h4>Ordenar por:</h4>
                 </div>
                 <div class="col-md-3">
                   <div class="dropdown">
