--- a/bootstrap-3.3.7-dist/index.html
+++ b/bootstrap-3.3.7-dist/index.html
@@ -37,10 +37,13 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-left smoothScroll" href="#main">
-            <img src="./flyhigh.jpg" height="50" class="d-inline-block align-top">
+          <a class="navbar-left smoothScroll" href="index.html">
+            <img src="./flyhigh.jpg" height="62" class="d-inline-block align-top">
           </a>
         </div>
+        <a href="#promo" class="smoothScroll navbar-right">
+          <button type="button" class="btn btn-lg navbar-btn" id="promoBtn">Promociones</button>
+        </a>
       </div>
     </nav>
 
@@ -134,13 +137,6 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-md-1 col-md-offset-1" id="promoBtn">
-        <a href="#promo" class="smoothScroll">
-          <button type="button" class="btn btn-warning btn-lg">Promociones</button>
-        </a>
-      </div>
-    </div>
   </div>
 
   <!-- <div class="container-fluid" >
