drop down bug fix

--- a/bootstrap-3.3.7-dist/PaymentPage.html
+++ b/bootstrap-3.3.7-dist/PaymentPage.html
@@ -65,10 +65,10 @@
                   <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu1" id="cardTypeDropDown">
-                  <li><a href="#" data-value="visa" id="amex">American Express</a></li>
-                  <li><a href="#" data-value="visa" id="diners">Diners</a></li>
-                  <li><a href="#" data-value="visa" id="visa">VISA</a></li>
-                  <li><a href="#" data-value="mastercard" id="mastercard">Mastercard</a></li>
+                  <li><a href="#!" data-value="visa" id="amex">American Express</a></li>
+                  <li><a href="#!" data-value="visa" id="diners">Diners</a></li>
+                  <li><a href="#!" data-value="visa" id="visa">VISA</a></li>
+                  <li><a href="#!" data-value="mastercard" id="mastercard">Mastercard</a></li>
                 </ul>
               </div>
             </div>
@@ -86,18 +86,18 @@
                   <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu2" id="expiryMonthDropDown">
-                  <li><a href="#" data-value="ene" id="ene">01</a></li>
-                  <li><a href="#" data-value="feb" id="feb">02</a></li>
-                  <li><a href="#" data-value="mar" id="mar">03</a></li>
-                  <li><a href="#" data-value="apr" id="apr">04</a></li>
-                  <li><a href="#" data-value="may" id="may">05</a></li>
-                  <li><a href="#" data-value="jun" id="jun">06</a></li>
-                  <li><a href="#" data-value="jul" id="jul">07</a></li>
-                  <li><a href="#" data-value="aug" id="aug">08</a></li>
-                  <li><a href="#" data-value="sep" id="sep">09</a></li>
-                  <li><a href="#" data-value="oct" id="oct">10</a></li>
-                  <li><a href="#" data-value="nov" id="nov">11</a></li>
-                  <li><a href="#" data-value="dic" id="dic">12</a></li>
+                  <li><a href="#!" data-value="ene" id="ene">01</a></li>
+                  <li><a href="#!" data-value="feb" id="feb">02</a></li>
+                  <li><a href="#!" data-value="mar" id="mar">03</a></li>
+                  <li><a href="#!" data-value="apr" id="apr">04</a></li>
+                  <li><a href="#!" data-value="may" id="may">05</a></li>
+                  <li><a href="#!" data-value="jun" id="jun">06</a></li>
+                  <li><a href="#!" data-value="jul" id="jul">07</a></li>
+                  <li><a href="#!" data-value="aug" id="aug">08</a></li>
+                  <li><a href="#!" data-value="sep" id="sep">09</a></li>
+                  <li><a href="#!" data-value="oct" id="oct">10</a></li>
+                  <li><a href="#!" data-value="nov" id="nov">11</a></li>
+                  <li><a href="#!" data-value="dic" id="dic">12</a></li>
                 </ul>
               </div>
             </div>
@@ -107,16 +107,16 @@
                   <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu3" id="expiryYearDropDown">
-                  <li><a href="#" data-value="ene" id="siete">2017</a></li>
-                  <li><a href="#" data-value="feb" id="ocho">2018</a></li>
-                  <li><a href="#" data-value="mar" id="nueve">2019</a></li>
-                  <li><a href="#" data-value="apr" id="cero">2020</a></li>
-                  <li><a href="#" data-value="may" id="uno">2021</a></li>
-                  <li><a href="#" data-value="jun" id="dos">2022</a></li>
-                  <li><a href="#" data-value="jul" id="tres">2023</a></li>
-                  <li><a href="#" data-value="aug" id="cuatro">2024</a></li>
-                  <li><a href="#" data-value="sep" id="cinco">2025</a></li>
-                  <li><a href="#" data-value="oct" id="seis">2026</a></li>
+                  <li><a href="#!" data-value="ene" id="siete">2017</a></li>
+                  <li><a href="#!" data-value="feb" id="ocho">2018</a></li>
+                  <li><a href="#!" data-value="mar" id="nueve">2019</a></li>
+                  <li><a href="#!" data-value="apr" id="cero">2020</a></li>
+                  <li><a href="#!" data-value="may" id="uno">2021</a></li>
+                  <li><a href="#!" data-value="jun" id="dos">2022</a></li>
+                  <li><a href="#!" data-value="jul" id="tres">2023</a></li>
+                  <li><a href="#!" data-value="aug" id="cuatro">2024</a></li>
+                  <li><a href="#!" data-value="sep" id="cinco">2025</a></li>
+                  <li><a href="#!" data-value="oct" id="seis">2026</a></li>
                 </ul>
               </div>
             </div>
