--- a/bootstrap-3.3.7-dist/PaymentPage.html
+++ b/bootstrap-3.3.7-dist/PaymentPage.html
@@ -25,6 +25,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
   </head>
 
   <body class="backgroundimage parallax">
@@ -48,6 +49,7 @@
           <div class="col-md-12 " id="vuelosDivVuelta"></div>
         </div>
       </div>
+
       <div class="row" id="main">
         <div class="col-md-6 col-md-offset-3 paymentMenu" >
           <div class="centerText"> <h4> Datos de pago </h4> </div>
