--- a/bootstrap-3.3.7-dist/CheckPage.html
+++ b/bootstrap-3.3.7-dist/CheckPage.html
@@ -119,11 +119,19 @@
                 <button type="button" class="btn btn-primary myInputs" id="nextButton">Confirmar Pago</button>
               </div>
             </div>
+                    
           </div>
         </div>
         </div>
       </div>
     </div>
+
+    <div class="row">
+      <div id="confirmBanner" class="col-md-6 col-md-offset-3" style="margin-top:20px">
+
+      </div>
+    </div>
+
   </body>
 
 </html>
