--- a/bootstrap-3.3.7-dist/InfoPage.html
+++ b/bootstrap-3.3.7-dist/InfoPage.html
@@ -39,7 +39,7 @@
       <div class="container-fluid ">
         <div class="row" style="margin-top:5%">
           <div class="col-md-10 col-md-offset-1 flightMenu">
-            <div class="centerText" id="title"></div>
+            <div class="centerText"><h4>Ida</h4></div>
             <div class="col-md-12" id="vuelosDivIda"></div>
             <div class="centerText" id="titleVuelta"></div>
             <div class="col-md-12 " id="vuelosDivVuelta"></div>
